--- a/curso-javascript-projeto-calculadora-clone/index.html
+++ b/curso-javascript-projeto-calculadora-clone/index.html
@@ -1810,7 +1810,7 @@
         </div>
     </div>
     <script src="scripts/controller/CalcController.js"></script>
-    <script src="scripts/calculadora.js"></script>
+    <script src="scripts/calculador.js"></script>
 </body>
 
 </html>
