--- a/curso-javascript-projeto-usuarios/index.html
+++ b/curso-javascript-projeto-usuarios/index.html
@@ -244,13 +244,13 @@
               <div class="box-body">
                 <div class="form-group">
                   <label for="exampleInputName">Nome</label>
-                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name">
+                  <input type="text" class="form-control" id="exampleInputName" placeholder="Digite o nome do usuário" name="name" value=>
                 </div>
                 <div class="form-group">
                   <label>Gênero</label>
                   <div class="radio">
                     <label for="exampleInputGenderM">
-                      <input type="radio" id="exampleInputGenderM" name="gender">
+                      <input type="radio" id="exampleInputGenderM" name="gender" checked>
                       Masculino</label>
                   </div>
                   <div class="radio">
@@ -266,8 +266,8 @@
                 <div class="form-group">
                   <label for="exampleInputCountry">País</label>
                   <select class="form-control" id="exampleInputCountry" name="country">
-                    <option value="" selected="selected">Selecione um país</option>
-                    <option value="United States">United States</option>
+                    <option value="">Selecione um país</option>
+                    <option value="United States" selected="selected">United States</option>
                     <option value="United Kingdom">United Kingdom</option>
                     <option value="Afghanistan">Afghanistan</option>
                     <option value="Albania">Albania</option>
